[package]
name = "dash7"
version = "0.4.0"
edition = "2021"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
description = "Implementation of a DASH7 ALP protocol codec."
readme = "README.md"
repository = "https://github.com/vhdirk/dash7-rs"
license = "MIT"
keywords = ["dash7", "alp", "parser", "protocol"]
categories = ["encoding", "parser-implementations"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dash7"
path = "src/bin.rs"

[dependencies]
deku = { version = "0.16.0", default-features = false }
bitvec = "1.0.1"
mutually_exclusive_features = "0.0.3"
clap = { version = "4.4.11", features = ["derive", "string", "cargo"] }
hex = "0.4.3"

[dev-dependencies]
hex-literal = "0.4.1"

[features]
default = ["std", "spec_v1_2"]
std = ["deku/std"]
alloc = ["deku/alloc"]

spec_v1_2 = []
subiot_v0 = []
wizzilab_v5_3 = []
