[workspace]
resolver = "2"
members = [
    "dash7",
    "dash7-cli",
    "dash7-flutter"
]

[workspace.package]
version = "0.7.2"
edition = "2021"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vhdirk/dash7-rs"
license = "MIT"
keywords = ["dash7", "alp", "parser", "protocol"]
categories = ["encoding", "parser-implementations"]
