[package]
name = "dash7"
description = "Implementation of a DASH7 ALP protocol codec."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
readme.workspace = true

[lib]
name = "dash7"
path = "src/lib.rs"

[dependencies]
deku = { version = "0.17.0", default-features = false }
enum_dispatch = "0.3.13"
mutually_exclusive_features = "0.1.0"

[dev-dependencies]
hex-literal = "0.4.1"

[features]
default = ["std", "spec"]
std = ["deku/std"]
alloc = ["deku/alloc"]

# main variants, used in code
_wizzilab = []
_subiot = []
_spec = []

# specific supported version
spec_v1_2 = ["_spec"]
subiot_v0_0 = ["_subiot"]
subiot_v0_1 = ["_subiot"]
wizzilab_v5_3 = ["_wizzilab"]

# shorthand pointing at latest version
spec = ["spec_v1_2"]
subiot = ["subiot_v0_1"]
wizzilab = ["wizzilab_v5_3"]

