[package]
name = "dash7"
description = "Implementation of a DASH7 ALP protocol codec."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
readme.workspace = true

[lib]
name = "dash7"
path = "src/lib.rs"

[dependencies]
deku = { workspace = true, default-features=false, features = ["logging"]}
strum = { version = "0.26.2", features = ["derive"] }
enum_dispatch = "0.3.13"
mutually_exclusive_features = "0.1.0"
thiserror = "2.0.11"
uniffi = { version = "0.28" }
log = "*"
env_logger = "*"
downcast-rs = {version = "2.0.1", default-features=false, features = ["sync"]}

[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ] }

[dev-dependencies]
hex-literal = "0.4.1"

[features]
default = ["std", "spec"]
std = ["deku/std", "downcast-rs/std"]
alloc = ["deku/alloc"]

# main variants, used in code
_wizzilab = []
_subiot = []
_spec = []

# specific supported version
spec_v1_2 = ["_spec"]
subiot_v0_0 = ["_subiot"]
subiot_v0_1 = ["_subiot"]
wizzilab_v5_3 = ["_wizzilab"]

# shorthand pointing at latest version
spec = ["spec_v1_2"]
subiot = ["subiot_v0_1"]
wizzilab = ["wizzilab_v5_3"]


[patch.crates-io]
# uniffi = { version = "0.28", git="https://github.com/mozilla/uniffi-rs", branch = "main"}
deku = {path = "../../deku" }
